fixing the alignment in the radio options

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,9 @@ img {
 body {
     text-align: center;
 }
+.input {
+    display: inline-block;
+}
+.radio-container {
+    margin-left: 1200px;
+}
